--- a/app/src/main/res/drawable/layerlist_create_thumb_switch.xml
+++ b/app/src/main/res/drawable/layerlist_create_thumb_switch.xml
@@ -1,7 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
     <item
-        android:width="30dp"
-        android:height="30dp"
-        android:drawable="@drawable/shape_create_thumb_switch" />
+        android:bottom="3dp"
+        android:left="3dp"
+        android:right="3dp"
+        android:top="3dp">
+        <shape android:shape="oval">
+            <size
+                android:width="25dp"
+                android:height="25dp" />
+            <solid android:color="@color/white" />
+            <stroke
+                android:width="1dp"
+                android:color="@color/black" />
+        </shape>
+    </item>
 </layer-list>
