--- a/app/src/main/res/drawable/selector_main_track_switch.xml
+++ b/app/src/main/res/drawable/selector_main_track_switch.xml
@@ -1,6 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:drawable="@drawable/shape_dark_mode_track_switch_false" android:state_checked="false" />
-    <item android:drawable="@drawable/shape_main_track_switch_true" android:state_checked="true" />
-
+    <item android:state_checked="false">
+        <shape android:shape="rectangle">
+            <corners android:radius="15dp" />
+            <size android:width="51dp" android:height="30dp" />
+            <solid android:color="@android:color/darker_gray" />
+        </shape>
+    </item>
+    <item android:state_checked="true">
+        <shape android:shape="rectangle">
+            <corners android:radius="15dp" />
+            <size android:width="51dp" android:height="30dp" />
+            <solid android:color="@color/main_color" />
+        </shape>
+    </item>
 </selector>
