--- a/app/src/main/res/drawable/selector_weekend_button.xml
+++ b/app/src/main/res/drawable/selector_weekend_button.xml
@@ -1,5 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:drawable="@drawable/shape_weekend_button_false" android:state_checked="false" />
-    <item android:drawable="@drawable/shape_weekend_button_true" android:state_checked="true" />
+    <item android:state_checked="false">
+        <shape android:shape="rectangle">
+            <solid android:color="@color/back_ground_color" />
+            <stroke android:width="1dp" android:color="@color/black" />
+            <size android:width="100dp" android:height="100dp" />
+        </shape>
+    </item>
+    <item android:state_checked="true">
+        <shape android:shape="rectangle">
+            <solid android:color="@color/main_color" />
+            <stroke android:width="1dp" android:color="@color/black" />
+            <size android:width="100dp" android:height="100dp" />
+        </shape>
+    </item>
 </selector>
