--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,6 +17,8 @@
         android:id="@+id/bottom_navigation_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="@color/back_ground_color"
+        app:itemIconTint="@color/black"
         app:itemRippleColor="@color/main_color"
         app:itemTextColor="@color/bottom_navigation_color"
         app:menu="@menu/bottom_navigation_menu" />
